Thu Jul 27 18:59:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/minimumTAO.html:
          Fixed some incorrect hyperlinks

Thu Jul 27 18:07:44 UTC 2006  William R. Otte  <wotte@dre.vanderbilt.edu>

        * TAO_ACE.mwc

          Replaced relative reference to ACE with an environment variable.
          This is necessary to allow TAO to build in flattened repo layout.

Wed Jul 26 07:59:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO-INSTALL.html:
        * tao/Transport.h:
        * docs/releasenotes/ftcorba_services.html:
        * docs/Security/SSLIOP-Usage.html:
          Updated documentation to point to the new svn repository

Mon Jul 24 21:54:22 UTC 2006  William R. Otte  <wotte@dre.vanderbilt.edu>

        * orbsvcs/orbsvcs/HTIOP/htiop_endpointsC.cpp
        * orbsvcs/orbsvcs/HTIOP/htiop_endpointsC.h
        * orbsvcs/orbsvcs/SSLIOP/ssl_endpointsC.h
        * orbsvcs/orbsvcs/SSLIOP/ssl_endpointsC.cpp
        * tao/RTScheduling/RTSchedulerC.cpp
        * tao/RTScheduling/RTSchedulerC.h

          Removed these, they were kept around erroneously.

        * ./TAO/performance-tests/AMI_Latency
        * ./TAO/performance-tests/Deferred_Latency
        * ./TAO/performance-tests/DII_Latency
        * ./TAO/performance-tests/DSI_Latency
        * ./TAO/performance-tests/Single_Threaded_Latency
        * ./TAO/performance-tests/Thread_Per_Connection_Latency
        * ./TAO/performance-tests/Thread_Pool_Latency

          Removed these directories, which had been previously merged into
          performance-tests/Latency

Mon Jul 24 19:02:33 UTC 2006  William R. Otte  <wotte@dre.vanderbilt.edu>

        * TAO/RTScheduling/RTSchedulerA.h

          Should not have been removed.

Mon Jul 24 18:52:33 UTC 2006  William R. Otte  <wotte@dre.vanderbilt.edu>

        * TAO/RTScheduling/RTSchedulerA.cpp

          Removed, these were kept around erroneously by the conversion script.
